--- a/home.html
+++ b/home.html
@@ -175,6 +175,8 @@
 
         <p>Check it out <strong><a href="https://infinite-ridge-38248.herokuapp.com/" target="_blank">HERE</a>!!!</strong></p>
 
+        <img src="redesign.png" class="webpage"/>
+
       </div>
       
 
